[tool.poetry]
name = "archi-toolbox"
version = "0.1.0"
description = "Set of tools useful for architects and interior designers"
authors = ["Jan Wadolowski <janwadolowski@gmail.com>"]
readme = "README.md"
packages = [{include = "archi_toolbox", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
svglib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
bandit = "^1.7.4"
mypy = "^1.0.1"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
mockito = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
